--- a/style.css
+++ b/style.css
@@ -141,6 +141,143 @@ body{
     height:100px;
     
 }
-.football-logo {
-   
+/* Responsive */
+
+/* Media Queries */
+
+/* Mobile Devices */
+
+@media only screen  and (max-width:688px){
+
+        body{
+            width:400px;
+                margin:0 auto;
+                align-items:center;
+                justify-content: center;
+
+
+        }
+
+        /* Header-styles */
+    #header .content {  
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+       
+    }
+
+
+    #header .banner img {
+        height: 165px;
+        width: 334px;
+        padding-top:50px;
+    }
+
+
+        /* main-content */
+
+
+
+       .players{
+           display:grid;
+            grid-template-columns:repeat(1,1fr);
+            width:300px;
+            padding-left:15px;
+        }
+        .player h2,p{
+            display:flex;
+            flex-direction:column;
+            align-items:center;
+            width:300px;
+            justify-content: center;;
+            text-align:center;
+        }
+            /* foooter */
+
+            .footer {
+                display: grid;
+                grid-template-columns: repeat(1,1fr);
+              
+                align-items: center;
+                margin-left:70px;
+            }
+        
+}   
+
+
+
+/* Tablet devices */
+
+@media only screen and (min-width:688px) and (max-width:992px) {
+
+    body{
+        width:600px;
+
+    }
+
+
+        /* Header-styles */
+
+        #header{
+            margin-right:
+        }
+
+        #header .content {  
+          display:flex;
+          margin-right:100px;
+           
+        }
+    
+    
+        #header .banner img {
+            height: 350px;
+            width: 350px;
+            padding-top:50px;
+           
+        }
+
+    /* Main-content */
+
+
+@media only screen and (min-width:700px) {
+    /* header-style */
+
+    body{
+        width:900px;
+       display:flex;
+       flex-direction:column;
+    }
+    #header{
+        margin-right:30px;
+       width:1100px;
+    }
+
+        /* Main-style */
+    .main-content{
+      
+        width:900px;
+        margin:0 auto;
+        padding:100px;
+
+    }
+
+    .players{
+        display:grid;
+        grid-template-columns:repeat(2,1fr);
+        padding-right:40px;
+        width:300px;
+    }
+
+
+     /* Footer */
+
+     .footer {
+       display:flex;
+       flex-direction: column;
+      margin:0 auto;
+    }
+
+        
 }
+
+
+
