--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
  
    align-items: center;
    justify-content: center;
+   width:930px;
    
    
 }
@@ -121,6 +122,50 @@ body{
             height:256px;
 }
 
+/* copa-News */
+.copa-article,.copa-title {
+    margin-right:10px;
+    margin-bottom:40px;
+}
+
+
+.copa-blog{
+    display:flex;
+    flex-direction:row;
+    border:4px solid #fff;
+    margin-top:40px;
+    padding:15px;
+    align-items:center;
+    justify-content:space-around;
+    background-color:#fff;
+    
+
+}
+.copa-text{
+    font-weight:bold;
+    font-size:15px;
+        width:700px;
+}
+.copa-text:hover h2,p{
+    color:brown;
+}
+
+.copa-image{
+    height:100px;
+    width:200px;
+    padding:30px;
+}
+.copa-image img{
+    height:100px;
+    width:200px;
+    align-items:center;
+}
+.copa-title{
+    color:rgb(206, 54, 84);
+}
+
+
+
 /* Footer-styles */
 .footer{
         display:grid;
@@ -200,6 +245,17 @@ body{
                 align-items: center;
                 margin-left:70px;
             }
+
+
+        /* copa-News */
+
+        .copa-blog{
+                display:grid;
+                grid-template-columns: repeat(1,1fr);
+        }
+        .copa-text{
+            width:200px;
+        }
         
 }   
 
@@ -254,16 +310,18 @@ body{
         /* Main-style */
     .main-content{
       
-        width:900px;
+        width:600px;
         margin:0 auto;
         padding:100px;
+        margin:0 auto;
 
     }
 
     .players{
         display:grid;
         grid-template-columns:repeat(2,1fr);
-        padding-right:40px;
+       
+        padding-right:30px;
         width:300px;
     }
 
@@ -275,9 +333,19 @@ body{
        flex-direction: column;
       margin:0 auto;
     }
+     /* copa-News */
 
+     .copa-blog{
+        display:grid;
+        grid-template-columns: repeat(2,1fr);
+        margin-left:30px;
+}
+.copa-text{
+    width:200px;
+}
         
 }
+
 
 
 
